--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
-
+		<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:100,300,400,500,700,800,900,100italic,300italic,400italic,500italic,700italic,800italic,900italic' rel='stylesheet' type='text/css'>
 		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
 		<script>
 			if( window.location.search.match( /print-pdf/gi ) ) {
@@ -36,16 +36,19 @@
 	
 	<body>
 		<header>
-			<div class="logo"><img src="" alt=""></div>
-			<h1>Tom Chilton</h1>
-			<div>
-				<ul>
-					<li>Driver</li>
-					<li>Roal Motorsport</li>
-					<li>Chevrolet Cruz</li>
-					<li>WTCC 2014</li>
-				</ul>
-			</div>`
+			<div class="header-container">
+				<div class="logo"><img src="img/header-img.png" alt=""></div>
+				<h1 class="page-title">Tom Chilton</h1>
+				<div class="divider"></div>
+				<div class="info">
+					<ul>
+						<li>Driver</li>
+						<li>Roal Motorsport</li>
+						<li>Chevrolet Cruz</li>
+						<li>WTCC 2014</li>
+					</ul>
+				</div>
+			</div>
 		</header>
 		<div class="reveal">
 
@@ -366,7 +369,8 @@
 
 		</div>
 		<footer>
-			<h2>PARTNERS</h2>
+			<h2 class="footer-title">PARTNERS</h2>
+			<div class="footer-divider"></div>
 			<img src="" alt="">
 			<img src="" alt="">
 			<img src="" alt="">
