--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/default.css" id="theme">
 		<link rel="stylesheet" href="css/main.css">
 
 		<!-- For syntax highlighting -->
@@ -54,59 +53,65 @@
 
 
 			<div class="slides">
-				<section>
-					<div class="top-info">Click the arrows on the edge tof the pages to navigate</div>
-					<div class="one-half">
-						<img src="img/slide1-img.png" alt="">
-					</div>
-					<div class="one-half">
-						<div class="one-half__of-section">
-							<img src="img/logo1.jpg" alt="">
+				<section class="slide1">
+					<div class="top-info">Click the arrows on the edge of the pages to navigate</div>
+					<div class="slide-content">
+						<div class="one-half">
+							<img src="img/slide1-img.png" alt="">
 						</div>
-						<div class="one-half__of-section">
-							<img src="img/logo2.png" alt="">
-						</div>
-						<div class="one-half__of-section">
-							<img src="img/logo3.png" alt="">
-						</div>
-						<div class="one-half__of-section">
-							<img src="img/logo4.png" alt="">
+						<div class="one-half">
+							<div class="one-half__of-section">
+								<img src="img/logo1.jpg" alt="">
+							</div>
+							<div class="one-half__of-section">
+								<img src="img/logo2.png" alt="">
+							</div>
+							<div class="one-half__of-section">
+								<img src="img/logo3.png" alt="">
+							</div>
+							<div class="one-half__of-section">
+								<img src="img/logo4.png" alt="">
+							</div>
 						</div>
 					</div>
 				</section>
 
-				<section>
+				<section class="slide2">
 					<section>
-						<div class="">what tom can do</div>
-						<div class="tf-section">
-							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium 
-							erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium 
-							erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-							<p class="highlighted">Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium 
-							erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium 
-							erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium 
-							erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium 
-							erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-						</div>
-						<div class="of-section">
-							<img src="" alt="">
-							<ul>
-								<li>Fast</li>
-								<li>Driven</li>
-								<li>Professional</li>
-							</ul>
+						<div class="section-title">what tom can do</div>
+						<div class="fb">
+							<div class="tf-section">
+								<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium 
+								erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+								<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium 
+								erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+								<p class="highlighted">Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium 
+								erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+								<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium 
+								erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+								<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium 
+								erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+								<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium 
+								erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+							</div>
+							<div class="of-section">
+								<img src="img/slide2-profile.jpg" alt="">
+								<ul>
+									<li class="item-one">Fast</li>
+									<li class="item-two">Driven</li>
+									<li class="item-three">Professional</li>
+								</ul>
+							</div>
 						</div>
 					</section>
-					<section>
+					<section class="dark-bg">
 						<h1>Tom Chilton BBC News 2013 (video style 1)</h1>
-						<iframe width="560" height="315" src="http://www.youtube.com/embed/rpLT81MFbGU" frameborder="0" allowfullscreen></iframe>
+						<div class="container">
+							<iframe src="http://www.youtube.com/embed/rpLT81MFbGU" frameborder="0" allowfullscreen></iframe>
+						</div>
 					</section>
-					<section>
-						<div class="p-style-1-ot">
+					<section class="dark-bg">
+						<div class="p-style-1-ot container">
 							<h2>'Press Style 1'</h2>
 							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
 							</p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
@@ -115,28 +120,32 @@
 							<img src="" alt="">
 						</div>
 					</section>
-					<section>
-						<div class="">what the team can do</div>
-						<div class="p-style-2-oh">
-							<h2>'Press Style 2</h2>
-							&ldquo;Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium ...&rdquo;
-							<img src="" alt="">
-						</div>
-						<div class="p-style-2-oh">
-							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectu placerat amet.</p>
+					<section class="dark-bg">
+						<div class="section-title">what the team can do</div>]
+						<div class="container">
+							<div class="p-style-2-oh">
+								<h2>'Press Style 2</h2>
+								&ldquo;Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium ...&rdquo;
+								<img src="" alt="">
+							</div>
+							<div class="p-style-2-oh">
+								<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+								<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+								<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectu placerat amet.</p>
+							</div>
 						</div>
 					</section>
-					<section>
-						<div class="p-style-2-oh">
-							<h2>'Press style 3'</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper felis quis tincidunt semper. Suspendisse quis lorem at dui gravida consectetur non vitae tellus. Pellentesque fringilla eleifend quam, et dictum lacus lacinia vel. Integer sodales nisl id hendrerit molestie. Quisque lacinia eros at lectus ornare, sit amet consequat risus cursus. Suspendisse et semper arcu. Suspendisse euismod id tellus ac viverra. Etiam ultricies, orci ac malesuada tempus, nisl lacus inter. ulum. Maecenas laoreet, mauris pharetra mattis accumsan, odio elit con  quis nisi.</p>
-						</div>
-						<div class="p-style-2-oh">
-							&ldquo;Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pre&rdquo;
-							<img src="" alt="">
-						</div>
+					<section class="dark-bg">
+						<div class="container">
+							<div class="p-style-2-oh">
+								&ldquo;Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pre&rdquo;
+								<img src="" alt="">
+							</div>
+							<div class="p-style-2-oh">
+								<h2>'Press style 3'</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper felis quis tincidunt semper. Suspendisse quis lorem at dui gravida consectetur non vitae tellus. Pellentesque fringilla eleifend quam, et dictum lacus lacinia vel. Integer sodales nisl id hendrerit molestie. Quisque lacinia eros at lectus ornare, sit amet consequat risus cursus. Suspendisse et semper arcu. Suspendisse euismod id tellus ac viverra. Etiam ultricies, orci ac malesuada tempus, nisl lacus inter. ulum. Maecenas laoreet, mauris pharetra mattis accumsan, odio elit con  quis nisi.</p>
+							</div>
+						</div>	
 					</section>
 				</section>
 					
@@ -371,9 +380,13 @@
 		<footer>
 			<h2 class="footer-title">PARTNERS</h2>
 			<div class="footer-divider"></div>
-			<img src="" alt="">
-			<img src="" alt="">
-			<img src="" alt="">
+			<div class="partner-logos">
+				<img src="img/hot-laps.png" alt="">
+				<img src="img/lets-race.png" alt="">
+			</div>
+			<div class="brand-logo">
+				<img src="img/3dom-logo.png">
+			</div>
 		</footer>
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.min.js"></script>
