--- a/index.html
+++ b/index.html
@@ -149,36 +149,46 @@
 					</section>
 				</section>
 					
-				<section>
+				<section class="slide3">
 					<section>
-						<div class="">what the team can do</div>
-						<div class="one-half">
-							<div class="">Roal Motorsport</div>
-							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-							< pclass="selected">Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-						</div>
-						<div class="one-half">
-							<img src="" alt="">
+						<div class="section-title">what the team can do</div>
+						<div class="fb">
+							<div class="one-half red-bg">
+								<div class="one-half__content">
+									<img class="" src="img/roal-motorsport.png">
+									<p class="white strong">Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+									<p class="white strong">Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+									<p class="dark">Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+								</div>
+							</div>
+							<div class="one-half img">
+								<img src="img/team.jpg" alt="">
+							</div>
 						</div>
 					</section>
-						<section>
-						<div class="">what the team can do</div>
-						<div class="one-half">
-							<div class="">Roal Motorsport</div>
-							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-							<p class="selected-red">Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-							<p>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
-						</div>
-						<div class="one-half">
-							<img src="" alt="">
+					<section>
+						<div class="section-title">what the team can do</div>
+						<div class="fb">
+							<div class="one-half dark-bg">
+								<div class"">
+									<div>
+									<img class="" src="img/roal-motorsport.png">
+								</div>
+									<p class="white strong">Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+									<p class="red strong">Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+									<p class="white">Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium erat.  Vestibulum iaculis, lectus bibendum gravida placerat amet.</p>
+								</div>
+							</div>
+							<div class="one-half img">
+								<img src="img/team2.jpg" alt="">
+							</div>
 						</div>
 					</section>
 				</section>
 
 				<section>
 					<section>
-						<div class="">what the series offer</div>
+						<div class="section-title">what the series offer</div>
 						<div>
 							<img src="" alt="">
 							<p>&ldquo;Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium ...&rdquo;</p>
@@ -193,7 +203,7 @@
 						</div>
 					</section>
 					<section>
-						<div class="">what the series offer</div>
+						<div class="section-title">what the series offer</div>
 						<div>
 							<img src="" alt="">
 							<p>&ldquo;Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium ...&rdquo;</p>
@@ -211,7 +221,7 @@
 
 				<section>
 					<section>
-						<div class="">the car (Style 1)</div>
+						<div class="section-title">the car (Style 1)</div>
 						<div class="of">
 							<img src="" alt="">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
@@ -222,7 +232,7 @@
 						</div>
 					</section>
 					<section>
-						<div class="">the car (Style 2)</div>
+						<div class="section-title">the car (Style 2)</div>
 						<div class="tf">
 							<img src="" alt="">
 						</div>
@@ -233,7 +243,7 @@
 						</div>
 					</section>
 					<section>
-						<div class="">the car (Style 3)</div>
+						<div class="section-title">the car (Style 3)</div>
 						<div class="">
 							<img src="" alt="">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
