--- a/index.html
+++ b/index.html
@@ -186,60 +186,68 @@
 					</section>
 				</section>
 
-				<section>
+				<section class="slide4">
 					<section>
 						<div class="section-title">what the series offer</div>
-						<div>
-							<img src="" alt="">
-							<p>&ldquo;Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium ...&rdquo;</p>
+						<div class="top-section-white">
+							<img src="img/wtcc-blue.png" alt="">
+							<blockquote><span>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium ...</span></blockquote>
 						</div>
-						<div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+						<div class="bottom-section">
+							<p class="red medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+							<p class="red medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+							<p class="red medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+							<p class="highlighted dark medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+							<p class="light medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+							<p class="light medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
 						</div>
 					</section>
 					<section>
 						<div class="section-title">what the series offer</div>
-						<div>
-							<img src="" alt="">
-							<p>&ldquo;Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium ...&rdquo;</p>
+						<div class="top-section-dark">
+							<img src="img/wtcc-white.png" alt="">
+							<blockquote><span>Suspendisse potenti. In nibh nisl, convallis a massa nec, hendrerit pretium ...</span></blockquote>
 						</div>
-						<div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+						<div class="bottom-section">
+							<p class="dark medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+							<p class="dark medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+							<p class="dark medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+							<p class="light medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+							<p class="highlighted medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+							<p class="light medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
 						</div>
 					</section>
 				</section>
 
-				<section>
+				<section class="slide5">
 					<section>
 						<div class="section-title">the car (Style 1)</div>
-						<div class="of">
-							<img src="" alt="">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-						</div>
-						<div class="tf">
-							<img src="" alt="">
+						<div class="fb">
+							<div class="of red">
+								<div class="of-content">
+									<img src="img/logo2.png" alt="">
+									<p class="top white regular">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+									<p class="white regular">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+								</div>
+							</div>
+							<div class="tf">
+								<img src="img/car1.jpg" alt="">
+							</div>
 						</div>
 					</section>
 					<section>
 						<div class="section-title">the car (Style 2)</div>
-						<div class="tf">
-							<img src="" alt="">
-						</div>
-						<div class="of">
-							<img src="" alt="">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+						<div class="fb">
+							<div class="tf">
+								<img src="img/car2.jpg" alt="">
+							</div>
+							<div class="of dark">
+								<div class="of-content">
+									<img src="img/logo2.png" alt="">
+									<p class="top white regular">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+									<p class="white regular">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit ipsum vitae porta sollicitudin. Phasellus eleifend magna cras amet.</p>
+								</div>
+							</div>
 						</div>
 					</section>
 					<section>
